# djfmt

./: Cargo.toml  Justfile  README.md  bacon.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
benches/: template_parser_bench.rs
src/: formatting.rs  html_parser.rs  lib.rs  main.rs
src/html_parser/: attribute.rs  comment.rs  element.rs  mod.rs  node.rs  tag.rs  text.rs
src/parser/: mod.rs
src/template_parser/: argument.rs  comment.rs  filter.rs  mod.rs  tag.rs  text.rs  utils.rs  variable.rs
tests/: formatting.rs
tests/formatter/django/expected/: 1.html  2.html
tests/formatter/django/input/: 1.html  2.html
tests/formatter/html/expected/: 2.html  4.html
tests/formatter/html/input/: 1.html  2.html  3.html  4.html
