[package]
name = "djfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
glob = "0.3.1"
rayon = "1.10.0"
winnow = "0.6.20"

[dev-dependencies]
rstest = "0.23.0"
pretty_assertions = "1.4.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "template_parser_bench"
harness = false
